fix: enable scrolling on mobile devices

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -2,7 +2,6 @@ body, #app {
   margin: 0;
   margin: 0;
   padding: 0;
-  overflow:hidden;
 }
 
 header,
@@ -198,6 +197,10 @@ tr:nth-child(even) {
 
 
 @media only screen and (min-width: 1201px) {
+  body, #app{
+    overflow: hidden;
+  }
+  
   main {
     grid-template-columns: auto auto;
     grid-template-rows: 100%;
